name:                scoseq
version:             0.1.0.0
synopsis:            Scoped sequential identifier generator
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Scoseq
  build-depends:       base  >= 4.8 && <4.9
               ,       ether >= 0.3
  hs-source-dirs:      lib
  default-language:    Haskell2010
